--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@ a Hierarchical Classifier", Journal of Petroleum Science & Engineering, 107883, 
 </ul><hr>
 <h3><font color="red"><b>Conferences</b></font><br></h3><hr>
 <ul>
+<li> <font color="blue">Achyut Mani Tripathi</font>,"Enhanced Few-Shot Learning for Environmental Sound Classification", IEEE International Joint Conference on Neural Networks
+(IJCNN),2022,[Under Review] <font color="red">[Core Rank=A]</font></li><hr>
+<li> <font color="blue">Achyut Mani Tripathi</font>,"Adv-IFD: Adversarial Attacks Dataset for An Intelligent Fault Diagnosis", IEEE International Joint Conference on Neural Networks
+(IJCNN),2022,[Under Review] <font color="red">[Core Rank=A]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi</font>,"Enhancing Multivariate Time Series Classification Using Long Short Term Memory
 and Evidence Feed Forward HMM, IEEE International Joint Conference on Neural Networks
 (IJCNN), July 19-24, 2020, Glasgow,UK, <font color="red">[Core Rank=A]</font></li><hr>
