--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ a Hierarchical Classifier", Journal of Petroleum Science & Engineering, 107883, 
 </ul><hr>
 <h3><font color="red"><b>Conferences</b></font><br></h3><hr>
 <ul>
-<li> <font color="blue">Achyut Mani Tripathi</font>,"Few-Shot Bit Planes: Defense Against AdversarialAttacks", IEEE International Joint Conference on Neural Networks
+<li> <font color="blue">Achyut Mani Tripathi</font>,"K-Defensive Bit Planes: Defense Against Adversarial Attacks", IEEE International Joint Conference on Neural Networks
 (IJCNN),2022,[Under Review] <font color="red">[Core Rank=A]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi</font>,"Enhancing Transferability of Adversarial Examples Across Deep Models Using Contrastive learning.", IEEE International Joint Conference on Neural Networks
 (IJCNN),2022,[Under Review] <font color="red">[Core Rank=A]</font></li><hr>
