--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ and Method for Activity Identification and Problem Prediction During Oil and Gas
 Drilling".</li></ul><hr>
 	<h3><font color="red"><b>Journals</b></font><br></h3><hr>
 	<ul>	
-<li><b> <font color="blue">Achyut Mani Tripathi</font>, "Reverse Adversarial Attack To ENhance Environmental SOund Classification", IEEE Transactions On Audio, Speech and Language Processing, <font color="red">Under
+<li><b> <font color="blue">Achyut Mani Tripathi</font>, "Reverse Adversarial Attack To Enhance Environmental Sound Classification", IEEE Transactions On Audio, Speech and Language Processing, <font color="red">Under
 Review</font>, <font color="red">[H-index=64, Impact Factor=3.9]</font></li><hr>		
 <li><b> <font color="blue">Achyut Mani Tripathi</font>, "Divide, Replace and Defend: Defense Against Adversarial Attacks", IEEE Transactions On Artificial Intelligence, <font color="red">Under
 Review</font>, <font color="red"></font></li><hr>		
