--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@ and Method for Activity Identification and Problem Prediction During Oil and Gas
 Drilling".</li></ul><hr>
 	<h3><font color="red"><b>Journals</b></font><br></h3><hr>
 	<ul>	
-<li><b> <font color="blue">Achyut Mani Tripathi</font>, "Reverse Adversarial Attack To Enhance Environmental Sound Classification", IEEE Transactions On Audio, Speech and Language Processing, <font color="red">Under
+<li><b> <font color="blue">Achyut Mani Tripathi</font>, "Reverse Adversarial Attack To Enhance Environmental Sound Classification", IEEE Transactions on Audio, Speech and Language Processing, <font color="red">Under
 Review</font>, <font color="red">[H-index=64, Impact Factor=3.9]</font></li><hr>		
-<li><b> <font color="blue">Achyut Mani Tripathi</font>, "Divide, Replace and Defend: Defense Against Adversarial Attacks", IEEE Transactions On Artificial Intelligence, <font color="red">Under
+<li><b> <font color="blue">Achyut Mani Tripathi</font>, "Divide, Replace and Defend: Defense Against Adversarial Attacks", IEEE Transactions on Artificial Intelligence, <font color="red">Under
 Review</font>, <font color="red"></font></li><hr>		
 <li><b> <font color="blue">Achyut Mani Tripathi</font>, "When Sub-Band Feature Meets Attention Mechanism While Knowledge Distillation for Sound Classification: An Empirical Study", Appplied Acoustic, Elsevier, <font color="red">Under Review</font>, <font color="red">[H-index=49, Impact Factor=2.639]</font></li><hr>
 <li><b> <font color="blue">Achyut Mani Tripathi</font>, Konark Paul, "An Empirical Study of Adversarial Attacks on Environmental Sound
