--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@ a Hierarchical Classifier", Journal of Petroleum Science & Engineering, 107883, 
 </ul><hr>
 <h3><font color="red"><b>Conferences</b></font><br></h3><hr>
 <ul>
-<li><font color="blue">Achyut Mani Tripathi</font>,"Know Your Sub-Bands: Enhancing EnvironmentalSound Classification With Pretext Tasks", IEEE International Joint Conference on Neural Networks
+<li><font color="blue">Achyut Mani Tripathi</font>,"Adversarial Defense Using Dropout and Converse Adversarial Data Augmentation", IEEE International Joint Conference on Neural Networks
 (IJCNN),2022,[Under Review] <font color="red">[Core Rank=A]</font></li><hr>	
 <li> <font color="blue">Achyut Mani Tripathi</font>,"K-Defensive Bit Planes: Defense Against Adversarial Attacks", IEEE International Joint Conference on Neural Networks
 (IJCNN),2022,[Under Review] <font color="red">[Core Rank=A]</font></li><hr>
-<li> <font color="blue">Achyut Mani Tripathi</font>,"Enhancing Transferability of Adversarial Examples Across Deep Models Using Contrastive learning.", IEEE International Joint Conference on Neural Networks
+<li> <font color="blue">Achyut Mani Tripathi</font>,"Enhancing Transferability of Adversarial Examples Across Deep Models Using Hidden Ad-Mix.", IEEE International Joint Conference on Neural Networks
 (IJCNN),2022,[Under Review] <font color="red">[Core Rank=A]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi</font>,"Adv-IFD: Adversarial Attacks Dataset for An Intelligent Fault Diagnosis", IEEE International Joint Conference on Neural Networks
 (IJCNN),2022,[Under Review] <font color="red">[Core Rank=A]</font></li><hr>
