--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@ Drilling".</li></ul><hr>
 	<ul>	
 <li><b> <font color="blue">Achyut Mani Tripathi</font>, "Reverse Adversarial Attack To Enhance Environmental Sound Classification", IEEE Transactions on Audio, Speech and Language Processing, <font color="red">Under
 Review</font>, <font color="red">[H-index=64, Impact Factor=3.9]</font></li><hr>		
-<li><b> <font color="blue">Achyut Mani Tripathi</font>, "Divide, Replace and Defend: Defense Against Adversarial Attacks", IEEE Transactions on Artificial Intelligence, <font color="red">Under
-Review</font>, <font color="red"></font></li><hr>		
+<li><b> <font color="blue">Achyut Mani Tripathi</font>, "Divide, Replace and Defend: Defense Against Adversarial Attacks", Knowledge-Based Systems, <font color="red">Under
+Review</font>, <font color="red">[H-index=96, Impact Factor=8.038]</font></li><hr>		
 <li><b> <font color="blue">Achyut Mani Tripathi</font>, "When Sub-Band Feature Meets Attention Mechanism While Knowledge Distillation for Sound Classification: An Empirical Study", Appplied Acoustic, Elsevier, <font color="red">Under Review</font>, <font color="red">[H-index=49, Impact Factor=2.639]</font></li><hr>
 <li><b> <font color="blue">Achyut Mani Tripathi</font>, Konark Paul, "An Empirical Study of Adversarial Attacks on Environmental Sound
 Classification", Applied Acoustic, Elsevier, <font color="red">Under Review </font>, <font color="red">[H-index=49, Impact Factor=2.639]</font></li><hr>
