--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@ and Method for Activity Identification and Problem Prediction During Oil and Gas
 Drilling".</li></ul><hr>
 	<h3><font color="red"><b>Journals</b></font><br></h3><hr>
 	<ul>	
-<li><b> <font color="blue">Achyut Mani Tripathi</font>, "Reverse Adversarial Attack To Enhance Environmental Sound Classification", IEEE Transactions on Audio, Speech and Language Processing, <font color="red">Under
+<li><b> <font color="blue">Achyut Mani Tripathi et al. </font>, "Reverse Adversarial Attack To Enhance Environmental Sound Classification", IEEE Transactions on Audio, Speech and Language Processing, <font color="red">Under
 Review</font>, <font color="red">[H-index=64, Impact Factor=3.9]</font></li><hr>		
-<li><b> <font color="blue">Achyut Mani Tripathi</font>, "Divide, Replace and Defend: Defense Against Adversarial Attacks", Knowledge-Based Systems, <font color="red">Under
+<li><b> <font color="blue">Achyut Mani Tripathi et al. </font>, "Divide, Replace and Defend: Defense Against Adversarial Attacks", Knowledge-Based Systems, <font color="red">Under
 Review</font>, <font color="red">[H-index=96, Impact Factor=8.038]</font></li><hr>		
-<li><b> <font color="blue">Achyut Mani Tripathi</font>, "When Sub-Band Feature Meets Attention Mechanism While Knowledge Distillation for Sound Classification: An Empirical Study", Appplied Acoustic, Elsevier, <font color="red">Under Review</font>, <font color="red">[H-index=49, Impact Factor=2.639]</font></li><hr>
-<li><b> <font color="blue">Achyut Mani Tripathi</font>, Konark Paul, "An Empirical Study of Adversarial Attacks on Environmental Sound
-Classification", Applied Acoustic, Elsevier, <font color="red">Under Review </font>, <font color="red">[H-index=49, Impact Factor=2.639]</font></li><hr>
+<li><b> <font color="blue">Achyut Mani Tripathi et al. </font>, "When Sub-Band Feature Meets Attention Mechanism While Knowledge Distillation for Sound Classification: An Empirical Study", Appplied Acoustic, Elsevier, <font color="red">Under Review</font>, <font color="red">[H-index=49, Impact Factor=2.639]</font></li><hr>
+<li><b> <font color="blue">Achyut Mani Tripathi </font>, Konark Paul, "An Empirical Study of Adversarial Attacks on Environmental Sound
+Classification",, <font color="red">In prepration </font>, <font color="red">[H-index=, Impact Factor=]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi</font>, Konark Paul, "Data Augmentation Guided Knowledge Distillation for Environmental
 Sound Classification",Neurocomputing, Elsevier, <font color="red">Major Revision Submitted</font>, <font color="red">[H-index=119, Impact Factor=5.719]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi*</font>, Aakansha Mishra*, "(Adv-ESC): Adversarial Attack Datasets for An Environmental Sound
@@ -118,14 +118,14 @@ a Hierarchical Classifier", Journal of Petroleum Science & Engineering, 107883, 
 </ul><hr>
 <h3><font color="red"><b>Conferences</b></font><br></h3><hr>
 <ul>
-<li><font color="blue">Achyut Mani Tripathi</font>,"Adversarial Defense Using Dropout and Converse Adversarial Data Augmentation", IEEE International Joint Conference on Neural Networks
-(IJCNN),2022,[Under Review] <font color="red">[Core Rank=A]</font></li><hr>	
-<li> <font color="blue">Achyut Mani Tripathi</font>,"K-Defensive Bit Planes: Defense Against Adversarial Attacks", IEEE International Joint Conference on Neural Networks
-(IJCNN),2022,[Under Review] <font color="red">[Core Rank=A]</font></li><hr>
-<li> <font color="blue">Achyut Mani Tripathi</font>,"Enhancing Transferability of Adversarial Examples Across Deep Models Using Hidden Ad-Mix.", IEEE International Joint Conference on Neural Networks
-(IJCNN),2022,[Under Review] <font color="red">[Core Rank=A]</font></li><hr>
-<li> <font color="blue">Achyut Mani Tripathi</font>,"Adv-IFD: Adversarial Attacks Dataset for An Intelligent Fault Diagnosis", IEEE International Joint Conference on Neural Networks
-(IJCNN),2022,[Under Review] <font color="red">[Core Rank=A]</font></li><hr>
+<li><font color="blue">Achyut Mani Tripathi et al. </font>,"Adversarial Defense Using Dropout and Converse Adversarial Data Augmentation", IEEE International Joint Conference on Neural Networks
+(IJCNN),2022,[In Prepration] <font color="red">[Core Rank=A]</font></li><hr>	
+<li> <font color="blue">Achyut Mani Tripathi et al. </font>,"K-Defensive Bit Planes: Defense Against Adversarial Attacks", IEEE International Joint Conference on Neural Networks
+(IJCNN),2022,[In Prepration] <font color="red">[Core Rank=A]</font></li><hr>
+<li> <font color="blue">Achyut Mani Tripathi et al. </font>,"Enhancing Transferability of Adversarial Examples Across Deep Models Using Hidden Ad-Mix.", IEEE International Joint Conference on Neural Networks
+(IJCNN),2022,[In Prepration] <font color="red">[Core Rank=A]</font></li><hr>
+<li> <font color="blue">Achyut Mani Tripathi et al. </font>,"Adv-IFD: Adversarial Attacks Dataset for An Intelligent Fault Diagnosis", IEEE International Joint Conference on Neural Networks
+(IJCNN),2022,[In Prepration] <font color="red">[Core Rank=A]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi</font>,"Enhancing Multivariate Time Series Classification Using Long Short Term Memory
 and Evidence Feed Forward HMM, IEEE International Joint Conference on Neural Networks
 (IJCNN), July 19-24, 2020, Glasgow,UK, <font color="red">[Core Rank=A]</font></li><hr>
