--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ Review</font>, <font color="red">[H-index=64, Impact Factor=3.9]</font></li><hr>
 Review</font>, <font color="red">[H-index=96, Impact Factor=8.038]</font></li><hr>		
 <li><b> <font color="blue">Achyut Mani Tripathi et al. </font>, "When Sub-Band Feature Meets Attention Mechanism While Knowledge Distillation for Sound Classification: An Empirical Study", Appplied Acoustic, Elsevier, <font color="red">Under Review</font>, <font color="red">[H-index=49, Impact Factor=2.639]</font></li><hr>
 <li><b> <font color="blue">Achyut Mani Tripathi </font>, Konark Paul, "An Empirical Study of Adversarial Attacks on Environmental Sound
-Classification",, <font color="red">In prepration </font>, <font color="red">[H-index=, Impact Factor=]</font></li><hr>
+Classification", IEEE Transactions on Information Forensics and Security, <font color="red">Under Review </font>, <font color="red">[H-index=92, Impact Factor=6.11]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi</font>, Konark Paul, "Data Augmentation Guided Knowledge Distillation for Environmental
 Sound Classification",Neurocomputing, Elsevier, <font color="red">Major Revision Submitted</font>, <font color="red">[H-index=119, Impact Factor=5.719]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi*</font>, Aakansha Mishra*, "(Adv-ESC): Adversarial Attack Datasets for An Environmental Sound
