--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ and Method for Activity Identification and Problem Prediction During Oil and Gas
 Drilling".</li></ul><hr>
 	<h3><font color="red"><b>Journals</b></font><br></h3><hr>
 	<ul>	
-<li><b> <font color="blue">Achyut Mani Tripathi et al. </font>, "Reverse Adversarial Attack To Enhance Environmental Sound Classification", IEEE Transactions on Audio, Speech and Language Processing, <font color="red">Under
+<li><b> <font color="blue">Achyut Mani Tripathi et al. </font>, "Time-Frequency Self Attention for Enviornmental Sound Classification", IEEE Transactions on Audio, Speech and Language Processing, <font color="red">Under
 Review</font>, <font color="red">[H-index=64, Impact Factor=3.9]</font></li><hr>		
 <li><b> <font color="blue">Achyut Mani Tripathi, Konark Paul </font>, "Divide, Replace and Defend: Defense Against Adversarial Attacks", IEEE Transactions on Artificial Intelligence, <font color="red">Under
 Review</font>, <font color="red">[H-index=, Impact Factor=]</font></li><hr>		
@@ -118,13 +118,13 @@ a Hierarchical Classifier", Journal of Petroleum Science & Engineering, 107883, 
 </ul><hr>
 <h3><font color="red"><b>Conferences</b></font><br></h3><hr>
 <ul>
-<li><font color="blue">Achyut Mani Tripathi et al. </font>,"Adversarial Defense Using Dropout and Converse Adversarial Data Augmentation", IEEE International Joint Conference on Neural Networks
+<li><font color="blue">Achyut Mani Tripathi et al. </font>,"Reverse Adversarial Attack To Enhance Environmental Sound Classification", IEEE International Joint Conference on Neural Networks
 (IJCNN),2022,[In Prepration] <font color="red">[Core Rank=A]</font></li><hr>	
 <li> <font color="blue">Achyut Mani Tripathi et al. </font>,"K-Defensive Bit Planes: Defense Against Adversarial Attacks", IEEE International Joint Conference on Neural Networks
 (IJCNN),2022,[In Prepration] <font color="red">[Core Rank=A]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi et al. </font>,"Enhancing Transferability of Adversarial Examples Across Deep Models Using Hidden Ad-Mix.", IEEE International Joint Conference on Neural Networks
 (IJCNN),2022,[In Prepration] <font color="red">[Core Rank=A]</font></li><hr>
-<li> <font color="blue">Achyut Mani Tripathi et al. </font>,"Adv-IFD: Adversarial Attacks Dataset for An Intelligent Fault Diagnosis", IEEE International Joint Conference on Neural Networks
+<li> <font color="blue">Achyut Mani Tripathi et al. </font>,"When Data Augmentation Supervises Knowledge Distillation", IEEE International Joint Conference on Neural Networks
 (IJCNN),2022,[In Prepration] <font color="red">[Core Rank=A]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi</font>,"Enhancing Multivariate Time Series Classification Using Long Short Term Memory
 and Evidence Feed Forward HMM, IEEE International Joint Conference on Neural Networks
