--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ and Method for Activity Identification and Problem Prediction During Oil and Gas
 Drilling".</li></ul><hr>
 	<h3><font color="red"><b>Journals</b></font><br></h3><hr>
 	<ul>	
-<li><b> <font color="blue">Achyut Mani Tripathi et al. </font>, "Time-Frequency Self Attention for Enviornmental Sound Classification", IEEE Transactions on Audio, Speech and Language Processing, <font color="red">Under
+<li><b> <font color="blue">Achyut Mani Tripathi et al. </font>, "Deep Representation Learning for Environmental Sound Classification Using Memory Equipped Time-Frequency Attention", IEEE Transactions on Audio, Speech and Language Processing, <font color="red">Under
 Review</font>, <font color="red">[H-index=64, Impact Factor=3.9]</font></li><hr>		
 <li><b> <font color="blue">Achyut Mani Tripathi, Konark Paul </font>, "Divide, Replace and Defend: Defense Against Adversarial Attacks", IEEE Transactions on Artificial Intelligence, <font color="red">Under
 Review</font>, <font color="red">[H-index=, Impact Factor=]</font></li><hr>		
