--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ Review</font>, <font color="red">[H-index=, Impact Factor=]</font></li><hr>
 <li><b> <font color="blue">Achyut Mani Tripathi </font>, Konark Paul, "An Empirical Study of Adversarial Attacks on Environmental Sound
 Classification", IEEE Transactions on Information Forensics and Security, <font color="red">Under Review </font>, <font color="red">[H-index=92, Impact Factor=6.11]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi</font>, Konark Paul, "Data Augmentation Guided Knowledge Distillation for Environmental
-Sound Classification",Neurocomputing, Elsevier, <font color="red">Major Revision Submitted</font>, <font color="red">[H-index=119, Impact Factor=5.719]</font></li><hr>
+Sound Classification",Neurocomputing, Elsevier, <font color="red">Minor Revision Submitted</font>, <font color="red">[H-index=119, Impact Factor=5.719]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi*</font>, Aakansha Mishra*, "(Adv-ESC): Adversarial Attack Datasets for An Environmental Sound
 Classification", Applied Acoustic, Elsevier,, 108437, Vol.185, 2021, <font color="red">[H-index=49, Impact Factor=2.639]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi</font>, Aakansha Mishra, "Environment Sound Classification Using An Attention-Based Residual Neural Network",
