--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ and Method for Activity Identification and Problem Prediction During Oil and Gas
 Drilling".</li></ul><hr>
 	<h3><font color="red"><b>Journals</b></font><br></h3><hr>
 	<ul>	
-<li><b> <font color="blue">Achyut Mani Tripathi et al. </font>, "Deep Representation Learning for Environmental Sound Classification Using Memory Equipped Time-Frequency Attention", IEEE Transactions on Audio, Speech and Language Processing, <font color="red">Under
+<li><b> <font color="blue">Achyut Mani Tripathi et al. </font>, "Deep Representation Learning for Environmental Sound Classification Using Time-Frequency Attention Loss", IEEE Transactions on Audio, Speech and Language Processing, <font color="red">Under
 Review</font>, <font color="red">[H-index=64, Impact Factor=3.9]</font></li><hr>		
 <li><b> <font color="blue">Achyut Mani Tripathi, Konark Paul </font>, "Divide, Replace and Defend: Defense Against Adversarial Attacks", IEEE Transactions on Artificial Intelligence, <font color="red">Under
 Review</font>, <font color="red">[H-index=, Impact Factor=]</font></li><hr>		
@@ -124,7 +124,7 @@ a Hierarchical Classifier", Journal of Petroleum Science & Engineering, 107883, 
 (IJCNN),2022,[In Prepration] <font color="red">[Core Rank=A]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi et al. </font>,"Enhancing Transferability of Adversarial Examples Across Deep Models Using Hidden Ad-Mix.", IEEE International Joint Conference on Neural Networks
 (IJCNN),2022,[In Prepration] <font color="red">[Core Rank=A]</font></li><hr>
-<li> <font color="blue">Achyut Mani Tripathi et al. </font>,"When Data Augmentation Supervises Knowledge Distillation", IEEE International Joint Conference on Neural Networks
+<li> <font color="blue">Achyut Mani Tripathi et al. </font>,"On Robustness of MLP-Mixer Against Adversarial Attacks", IEEE International Joint Conference on Neural Networks
 (IJCNN),2022,[In Prepration] <font color="red">[Core Rank=A]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi</font>,"Enhancing Multivariate Time Series Classification Using Long Short Term Memory
 and Evidence Feed Forward HMM, IEEE International Joint Conference on Neural Networks
