--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@ a Hierarchical Classifier", Journal of Petroleum Science & Engineering, 107883, 
 (IJCNN),2022,[In Prepration] <font color="red">[Core Rank=A]</font></li><hr>	
 <li> <font color="blue">Achyut Mani Tripathi et al. </font>,"K-Defensive Bit Planes: Defense Against Adversarial Attacks", IEEE International Joint Conference on Neural Networks
 (IJCNN),2022,[In Prepration] <font color="red">[Core Rank=A]</font></li><hr>
+<li><font color="blue">Achyut Mani Tripathi et al. </font>,"Investigation of Performance of Visual Attention Mechanisms for Environmental Sound Classification: A Comparative Study", IEEE International Joint Conference on Neural Networks
+(IJCNN),2022,[In Prepration] <font color="red">[Core Rank=A]</font></li><hr>		
 <li> <font color="blue">Achyut Mani Tripathi et al. </font>,"Enhancing Transferability of Adversarial Examples Across Deep Models Using Hidden Ad-Mix.", IEEE International Joint Conference on Neural Networks
 (IJCNN),2022,[In Prepration] <font color="red">[Core Rank=A]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi et al. </font>,"On Robustness of MLP-Mixer Against Adversarial Attacks", IEEE International Joint Conference on Neural Networks
