--- a/index.html
+++ b/index.html
@@ -119,17 +119,17 @@ a Hierarchical Classifier", Journal of Petroleum Science & Engineering, 107883, 
 <h3><font color="red"><b>Conferences</b></font><br></h3><hr>
 <ul>
 <li><font color="blue">Achyut Mani Tripathi et al. </font>,"Reverse Adversarial Attack To Enhance Environmental Sound Classification", IEEE International Joint Conference on Neural Networks
-(IJCNN),2022,[In Prepration] <font color="red">[Core Rank=A]</font></li><hr>	
+(IJCNN),2022, [In Prepration] <font color="red">[Core Rank=A]</font></li><hr>	
 <li> <font color="blue">Achyut Mani Tripathi et al. </font>,"K-Defensive Bit Planes: Defense Against Adversarial Attacks", IEEE International Joint Conference on Neural Networks
-(IJCNN),2022,[In Prepration] <font color="red">[Core Rank=A]</font></li><hr>
+(IJCNN),2022, [In Prepration] <font color="red">[Core Rank=A]</font></li><hr>
 <li><font color="blue">Achyut Mani Tripathi et al. </font>,"Investigation of Performance of Visual Attention Mechanisms for Environmental Sound Classification: A Comparative Study", IEEE International Joint Conference on Neural Networks
-(IJCNN),2022,[In Prepration] <font color="red">[Core Rank=A]</font></li><hr>		
+(IJCNN),2022, [In Prepration] <font color="red">[Core Rank=A]</font></li><hr>		
 <li> <font color="blue">Achyut Mani Tripathi et al. </font>,"Enhancing Transferability of Adversarial Examples Across Deep Models Using Hidden Ad-Mix.", IEEE International Joint Conference on Neural Networks
-(IJCNN),2022,[In Prepration] <font color="red">[Core Rank=A]</font></li><hr>
+(IJCNN),2022, [In Prepration] <font color="red">[Core Rank=A]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi et al. </font>,"On Robustness of MLP-Mixer Against Adversarial Attacks", IEEE International Joint Conference on Neural Networks
-(IJCNN),2022,[In Prepration] <font color="red">[Core Rank=A]</font></li><hr>
-<li> <font color="blue">Achyut Mani Tripathi et al. </font>,"Amended Knowledge Distillation for Environmental SOund Classification", IEEE International Joint Conference on Neural Networks
-(IJCNN),2022,[In Prepration] <font color="red">[Core Rank=A]</font></li><hr>	
+(IJCNN),2022, [In Prepration] <font color="red">[Core Rank=A]</font></li><hr>
+<li> <font color="blue">Achyut Mani Tripathi et al. </font>,"Amended Knowledge Distillation for Environmental Sound Classification", IEEE International Joint Conference on Neural Networks
+(IJCNN),2022, [In Prepration] <font color="red">[Core Rank=A]</font></li><hr>	
 <li> <font color="blue">Achyut Mani Tripathi</font>,"Enhancing Multivariate Time Series Classification Using Long Short Term Memory
 and Evidence Feed Forward HMM, IEEE International Joint Conference on Neural Networks
 (IJCNN), July 19-24, 2020, Glasgow,UK, <font color="red">[Core Rank=A]</font></li><hr>
