--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ a Hierarchical Classifier", Journal of Petroleum Science & Engineering, 107883, 
 (IJCNN),2022, [In Prepration] <font color="red">[Core Rank=A]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi et al. </font>,"On Robustness of MLP-Mixer Against Adversarial Attacks", IEEE International Joint Conference on Neural Networks
 (IJCNN),2022, [In Prepration] <font color="red">[Core Rank=A]</font></li><hr>
-<li> <font color="blue">Achyut Mani Tripathi et al. </font>,"Amended Knowledge Distillation for Environmental Sound Classification", IEEE International Joint Conference on Neural Networks
+<li> <font color="blue">Achyut Mani Tripathi et al. </font>,"Revamped  Knowledge Distillation for Environmental Sound Classification", IEEE International Joint Conference on Neural Networks
 (IJCNN),2022, [In Prepration] <font color="red">[Core Rank=A]</font></li><hr>	
 <li> <font color="blue">Achyut Mani Tripathi</font>,"Enhancing Multivariate Time Series Classification Using Long Short Term Memory
 and Evidence Feed Forward HMM, IEEE International Joint Conference on Neural Networks
