--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@ img {
 	<div class="row">
 	<h2><b>Publications:<br></h2><hr>
 	<h3><font color="red"><b>Patents</b></font><br></h3><ul><hr>
-	<li> Senthilmurugan S, Rashmi Dutta Baruah, Munawar A. Shaik, <b><font color="blue">Achyut Mani Tripathi</font></b>, Senthil Selvaraju,
-Viswanth Ramba, Bala Kumara Vignesh M, Amol Musale, Gauba SK, Samal KB, "A System
+	<li> Senthilmurugan S, Rashmi Dutta Baruah, <b><font color="blue">Achyut Mani Tripathi</font></b>, Senthil Selvaraju,
+Viswanth Ramba, Bala Kumara Vignesh M, Amol Musale, Gauba SK, "A System
 and Method for Activity Identification and Problem Prediction During Oil and Gas Well
 Drilling".</li></ul><hr>
 	<h3><font color="red"><b>Journals</b></font><br></h3><hr>
