--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ and Method for Activity Identification and Problem Prediction During Oil and Gas
 Drilling".</li></ul><hr>
 	<h3><font color="red"><b>Journals</b></font><br></h3><hr>
 	<ul>	
-<li><b> <font color="blue">Achyut Mani Tripathi,</font> Swarup Ranjan Behra, "Continual Learning for Environmental Sound Classification: A Comparative Review</font>, <font color="red">[H-index=64, Impact Factor=3.9]</font></li><hr>		
+<li><b> <font color="blue">Achyut Mani Tripathi,</font> Swarup Ranjan Behera, "Continual Learning for Environmental Sound Classification: A Comparative Review</font>, <font color="red">[H-index=64, Impact Factor=3.9]</font></li><hr>		
 <li><b> <font color="blue">Achyut Mani Tripathi </font> Konark Paul, "Divide, Replace and Defend: Defense Against Adversarial Attacks", IEEE Transactions on Artificial Intelligence, <font color="red">Under
 Review</font>, <font color="red">[H-index=, Impact Factor=]</font></li><hr>		
 <li><b> <font color="blue">Achyut Mani Tripathi </font>, Konark Paul, "An Empirical Study of Adversarial Attacks on Environmental Sound
@@ -117,19 +117,19 @@ a Hierarchical Classifier", Journal of Petroleum Science & Engineering, 107883, 
 </ul><hr>
 <h3><font color="red"><b>Conferences</b></font><br></h3><hr>
 <ul>
-<li><font color="blue">Achyut Mani Tripathi </font>,Swarup Ranjan Behra, Konark Paul ,"Reverse Adversarial Attack To Enhance Environmental Sound Classification", IEEE International Joint Conference on Neural Networks
-(IJCNN),2022, [In Prepration] <font color="red">[Core Rank=A]</font></li><hr>	
-<li> <font color="blue">Achyut Mani Tripathi </font>, Swarup Ranjan Behra, Konark Paul ,"K-Defensive Bit Planes: Defense Against Adversarial Attacks", IEEE International Joint Conference on Neural Networks
-(IJCNN),2022, [In Prepration] <font color="red">[Core Rank=A]</font></li><hr>
-<li><font color="blue">Achyut Mani Tripathi</font>, Swarup Ranjan Behra, Konark Paul,"Investigation of Performance of Visual Attention Mechanisms for Environmental Sound Classification: A Comparative Study", IEEE International Joint Conference on Neural Networks
-(IJCNN),2022, [In Prepration] <font color="red">[Core Rank=A]</font></li><hr>		
-<li> <font color="blue">Achyut Mani Tripathi </font>, Swarup Ranjan Behra, Konark Paul,"Adv-IFD: Adversarial Attack Datasets for An
+<li><font color="blue">Achyut Mani Tripathi </font>,Swarup Ranjan Behera, Konark Paul ,"Reverse Adversarial Attack To Enhance Environmental Sound Classification", IEEE International Joint Conference on Neural Networks
+(IJCNN),2022, [Under Review] <font color="red">[Core Rank=A]</font></li><hr>	
+<li> <font color="blue">Achyut Mani Tripathi </font>, Swarup Ranjan Behera, Konark Paul ,"K-Defensive Bit Planes: Defense Against Adversarial Attacks", IEEE International Joint Conference on Neural Networks
+(IJCNN),2022, [Under Review] <font color="red">[Core Rank=A]</font></li><hr>
+<li><font color="blue">Achyut Mani Tripathi</font>, Swarup Ranjan Behera, Konark Paul,"Investigation of Performance of Visual Attention Mechanisms for Environmental Sound Classification: A Comparative Study", IEEE International Joint Conference on Neural Networks
+(IJCNN),2022, [Under Review] <font color="red">[Core Rank=A]</font></li><hr>		
+<li> <font color="blue">Achyut Mani Tripathi </font>, Swarup Ranjan Behera, Konark Paul,"Adv-IFD: Adversarial Attack Datasets for An
 Intelligent Fault Diagnosis", IEEE International Joint Conference on Neural Networks
-(IJCNN),2022, [In Prepration] <font color="red">[Core Rank=A]</font></li><hr>
-<li> <font color="blue">Achyut Mani Tripathi </font>,Aakansha Mishra ,"On Robustness of MLP-Mixer Against Adversarial Attacks", IEEE International Joint Conference on Neural Networks
-(IJCNN),2022, [In Prepration] <font color="red">[Core Rank=A]</font></li><hr>
+(IJCNN),2022, [Under Review] <font color="red">[Core Rank=A]</font></li><hr>
+<li> <font color="blue">Achyut Mani Tripathi </font>, Aakansha Mishra ,"On Robustness of MLP-Mixer Against Adversarial Attacks", IEEE International Joint Conference on Neural Networks
+(IJCNN),2022, [Under Review] <font color="red">[Core Rank=A]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi </font>, Aakansha Mishra ,"Revamped  Knowledge Distillation for Environmental Sound Classification", IEEE International Joint Conference on Neural Networks
-(IJCNN),2022, [In Prepration] <font color="red">[Core Rank=A]</font></li><hr>	
+(IJCNN),2022, [Under Review] <font color="red">[Core Rank=A]</font></li><hr>	
 <li> <font color="blue">Achyut Mani Tripathi</font>,"Enhancing Multivariate Time Series Classification Using Long Short Term Memory
 and Evidence Feed Forward HMM, IEEE International Joint Conference on Neural Networks
 (IJCNN), July 19-24, 2020, Glasgow,UK, <font color="red">[Core Rank=A]</font></li><hr>
