--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ a Hierarchical Classifier", Journal of Petroleum Science & Engineering, 107883, 
 </ul><hr>
 <h3><font color="red"><b>Conferences</b></font><br></h3><hr>
 <ul>
-<li><font color="blue">Achyut Mani Tripathi </font>,Swarup Ranjan Behera, Konark Paul ,"Reverse Adversarial Attack To Enhance Environmental Sound Classification", IEEE International Joint Conference on Neural Networks
+<li><font color="blue">Achyut Mani Tripathi </font>, Swarup Ranjan Behera, Konark Paul ,"Reverse Adversarial Attack To Enhance Environmental Sound Classification", IEEE International Joint Conference on Neural Networks
 (IJCNN),2022, [Under Review] <font color="red">[Core Rank=A]</font></li><hr>	
 <li> <font color="blue">Achyut Mani Tripathi </font>, Swarup Ranjan Behera, Konark Paul ,"K-Defensive Bit Planes: Defense Against Adversarial Attacks", IEEE International Joint Conference on Neural Networks
 (IJCNN),2022, [Under Review] <font color="red">[Core Rank=A]</font></li><hr>
@@ -126,9 +126,9 @@ a Hierarchical Classifier", Journal of Petroleum Science & Engineering, 107883, 
 <li> <font color="blue">Achyut Mani Tripathi </font>, Swarup Ranjan Behera, Konark Paul,"Adv-IFD: Adversarial Attack Datasets for An
 Intelligent Fault Diagnosis", IEEE International Joint Conference on Neural Networks
 (IJCNN),2022, [Under Review] <font color="red">[Core Rank=A]</font></li><hr>
-<li> <font color="blue">Achyut Mani Tripathi </font>, Aakansha Mishra ,"On Robustness of MLP-Mixer Against Adversarial Attacks", IEEE International Joint Conference on Neural Networks
+<li> <font color="blue">Achyut Mani Tripathi*</font>, Aakansha Mishra*,"On Robustness of MLP-Mixer Against Adversarial Attacks", IEEE International Joint Conference on Neural Networks
 (IJCNN),2022, [Under Review] <font color="red">[Core Rank=A]</font></li><hr>
-<li> <font color="blue">Achyut Mani Tripathi </font>, Aakansha Mishra ,"Revamped  Knowledge Distillation for Environmental Sound Classification", IEEE International Joint Conference on Neural Networks
+<li> <font color="blue">Achyut Mani Tripathi* </font>, Aakansha Mishra* ,"Revamped  Knowledge Distillation for Environmental Sound Classification", IEEE International Joint Conference on Neural Networks
 (IJCNN),2022, [Under Review] <font color="red">[Core Rank=A]</font></li><hr>	
 <li> <font color="blue">Achyut Mani Tripathi</font>,"Enhancing Multivariate Time Series Classification Using Long Short Term Memory
 and Evidence Feed Forward HMM, IEEE International Joint Conference on Neural Networks
