--- a/index.html
+++ b/index.html
@@ -92,12 +92,10 @@ img {
 	<div class="row">
 	<h2><b>Publications:<br></h2><hr>
 	<h3><font color="red"><b>Patents</b></font><br></h3><ul><hr>
-	<li> Senthilmurugan S, Rashmi Dutta Baruah, <b><font color="blue">Achyut Mani Tripathi</font></b>, Senthil Selvaraju,
-Viswanth Ramba, Bala Kumara Vignesh M, Amol Musale, Gauba SK, "A System
-and Method for Activity Identification and Problem Prediction During Oil and Gas Well
-Drilling".</li></ul><hr>
-	<h3><font color="red"><b>Journals</b></font><br></h3><hr>
-	<ul>	
+	<li> Senthilmurugan S, Rashmi Dutta Baruah, <b><font color="blue">Achyut Mani Tripathi</font></b>, Senthil Selvaraju, Viswanth Ramba, Bala Kumara Vignesh M, Amol Musale, Gauba SK, "A System
+and Method for Activity Identification and Problem Prediction During Oil and Gas Well Drilling".</li></ul><hr>
+<h3><font color="red"><b>Journals</b></font><br></h3><hr>
+<ul>	
 <li><b> <font color="blue">Achyut Mani Tripathi,</font>, "Sub-Band Guided Online Knowledge Distillation for An Environmental Sound Classification, IEEE/ACM Transactions on Audio, Speech, and Language Processing,<font color="red">[H-index=64, Impact Factor=3.9]</font></li><hr>		
 <li><b> <font color="blue">Achyut Mani Tripathi,</font>, "Divide and Conquer Attention Mechanism for An Environmental Sound Classification, IEEE/ACM Transactions on Audio, Speech, and Language Processing,<font color="red">[H-index=64, Impact Factor=3.9]</font></li><hr>		
 <li><b> <font color="blue">Achyut Mani Tripathi </font> Konark Paul, "Divide, Replace and Defend: Defense Against Adversarial Attacks", IEEE Transactions on Artificial Intelligence, <font color="red">Under
@@ -106,7 +104,7 @@ Review</font>, <font color="red">[H-index=, Impact Factor=]</font></li><hr>
 Classification", Applied Acoustic, <font color="red">Under Review </font>, <font color="red">[H-index=49, Impact Factor=2.639]</font></li><hr>
 <li><b> <font color="blue">Achyut Mani Tripathi </font> Konark Paul, "When Sub-Band Feature Meets Attention Mechanism While Knowledge Distillation for Sound Classification: An Empirical Study", Appplied Acoustic, Elsevier, <font color="red">(Major Revision Submitted)</font>, <font color="red">[H-index=49, Impact Factor=2.639]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi</font>, Konark Paul, "Data Augmentation Guided Knowledge Distillation for Environmental
-Sound Classification",Neurocomputing, Elsevier, <font color="red">Acepted</font>, <font color="red">[H-index=119, Impact Factor=5.719]</font></li><hr>
+Sound Classification",Neurocomputing, Elsevier, <font color="red">Accepted</font>, <font color="red">[H-index=119, Impact Factor=5.719]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi*</font>, Aakansha Mishra*, "(Adv-ESC): Adversarial Attack Datasets for An Environmental Sound
 Classification", Applied Acoustic, Elsevier,, 108437, Vol.185, 2021, <font color="red">[H-index=49, Impact Factor=2.639]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi</font>, Aakansha Mishra, "Environment Sound Classification Using An Attention-Based Residual Neural Network",
