--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ and Method for Activity Identification and Problem Prediction During Oil and Gas
 <h3><font color="red"><b>Journals</b></font><br></h3><hr>
 <ul>	
 <li><b> <font color="blue">Achyut Mani Tripathi,</font>, "Sub-Band Guided Online Knowledge Distillation for An Environmental Sound Classification, IEEE/ACM Transactions on Audio, Speech, and Language Processing,<font color="red">[H-index=64, Impact Factor=3.9]</font></li><hr>		
-<li><b> <font color="blue">Achyut Mani Tripathi,</font>, "Divide and Conquer Attention Mechanism for An Environmental Sound Classification, IEEE/ACM Transactions on Audio, Speech, and Language Processing,<font color="red">[H-index=64, Impact Factor=3.9]</font></li><hr>				
+<li><b> <font color="blue">Achyut Mani Tripathi,</font>, "Spatio-Temporal Knowledge Distillation for An Environmental Sound Classification, IEEE/ACM Transactions on Audio, Speech, and Language Processing,<font color="red">[H-index=64, Impact Factor=3.9]</font></li><hr>				
 <li><b> <font color="blue">Achyut Mani Tripathi </font>, Konark Paul, "An Empirical Study of Adversarial Attacks on Environmental Sound
 Classification", Applied Acoustic, <font color="red">Under Review </font>, <font color="red">[H-index=49, Impact Factor=2.639]</font></li><hr>
 <li><b> <font color="blue">Achyut Mani Tripathi </font> Konark Paul, "When Sub-Band Feature Meets Attention Mechanism While Knowledge Distillation for Sound Classification: An Empirical Study", Appplied Acoustic, Elsevier, <font color="red">(Major Revision Submitted)</font>, <font color="red">[H-index=49, Impact Factor=2.639]</font></li><hr>
