--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ img {
 and Method for Activity Identification and Problem Prediction During Oil and Gas Well Drilling".</li></ul><hr>
 <h3><font color="red"><b>Journals</b></font><br></h3><hr>
 <ul>	
-<li><b> <font color="blue">Achyut Mani Tripathi,</font>, "Revisit Knowledge Distillation for An Environmental Sound Classification: An Empirical Study and New Outlooks , IEEE/ACM Transactions on Audio, Speech, and Language Processing,<font color="red">[H-index=64, Impact Factor=3.9]</font></li><hr>						
+<li><b> <font color="blue">Achyut Mani Tripathi,</font>, "Multiview Knowledge Distillation for An Environmental Sound Classification, IEEE/ACM Transactions on Audio, Speech, and Language Processing,<font color="red">[H-index=64, Impact Factor=3.9]</font></li><hr>						
 <li><b> <font color="blue">Achyut Mani Tripathi </font>, Konark Paul, "An Empirical Study of Adversarial Attacks on Environmental Sound
 Classification", Applied Acoustic, <font color="red">Under Review </font>, <font color="red">[H-index=49, Impact Factor=2.639]</font></li><hr>
 <li><b> <font color="blue">Achyut Mani Tripathi </font> Konark Paul, "When Sub-Band Feature Meets Attention Mechanism While Knowledge Distillation for Sound Classification: An Empirical Study", Appplied Acoustic, Elsevier, <font color="red">(Major Revision Submitted)</font>, <font color="red">[H-index=49, Impact Factor=2.639]</font></li><hr>
@@ -114,8 +114,7 @@ a Hierarchical Classifier", Journal of Petroleum Science & Engineering, 107883, 
 <h3><font color="red"><b>Conferences</b></font><br></h3><hr>
 <ul>
 <li><font color="blue">Achyut Mani Tripathi </font>, Konark Paul ,"Divide, Distill and Enhance: Online Knowledge Distillation for An Environmental Sound Classification", INTERSPEECH, 2022, [Under Review] <font color="red">[Core Rank=A*]</font></li><hr>
-<li><font color="blue">Achyut Mani Tripathi </font>, Konark Paul ,"Vulnerability of Deep Model Against Adversarial Attacks for An
-Environmental Sound Classification: An Empirical Study", INTERSPEECH, 2022, [Under Review] <font color="red">[Core Rank=A*]</font></li><hr>
+<li><font color="blue">Achyut Mani Tripathi </font>, Konark Paul ,"Temporal Self-Attention-Based Residual Network for An Environmental Sound Classification", INTERSPEECH, 2022, [Under Review] <font color="red">[Core Rank=A*]</font></li><hr>
 <li><font color="blue">Achyut Mani Tripathi </font>, Swarup Ranjan Behera, Konark Paul ,"Reverse Adversarial Attack To Enhance Environmental Sound Classification", IEEE International Joint Conference on Neural Networks
 (IJCNN),2022, [Under Review] <font color="red">[Core Rank=A]</font></li><hr>	
 <li> <font color="blue">Achyut Mani Tripathi </font>, Swarup Ranjan Behera, Konark Paul ,"K-Defensive Bit Planes: Defense Against Adversarial Attacks", IEEE International Joint Conference on Neural Networks
