--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@ a Hierarchical Classifier", Journal of Petroleum Science & Engineering, 107883, 
 </ul><hr>
 <h3><font color="red"><b>Conferences</b></font><br></h3><hr>
 <ul>
-<li><font color="blue">Achyut Mani Tripathi </font>, Konark Paul ,"Divide, Distill and Enhance: Online Knowledge Distillation for An Environmental Sound Classification", INTERSPEECH, 2022, [Under Review] <font color="red">[Core Rank=A*]</font></li><hr>
-<li><font color="blue">Achyut Mani Tripathi </font>, Konark Paul ,"Temporal Self-Attention-Based Residual Network for An Environmental Sound Classification", INTERSPEECH, 2022, [Under Review] <font color="red">[Core Rank=A*]</font></li><hr>
+<li><font color="blue">Achyut Mani Tripathi </font>, Konark Paul ,"Divide, Distill and Enhance: Online Knowledge Distillation for An Environmental Sound Classification", Conference of the International Speech Communication Association (INTERSPEECH), 2022, [Under Review] <font color="red">[Core Rank=A*]</font></li><hr>
+<li><font color="blue">Achyut Mani Tripathi </font>, Konark Paul ,"Temporal Self-Attention-Based Residual Network for An Environmental Sound Classification", Conference of the International Speech Communication Association (INTERSPEECH), 2022, [Under Review] <font color="red">[Core Rank=A*]</font></li><hr>
 <li><font color="blue">Achyut Mani Tripathi </font>, Swarup Ranjan Behera, Konark Paul ,"Reverse Adversarial Attack To Enhance Environmental Sound Classification", IEEE International Joint Conference on Neural Networks
 (IJCNN),2022, [Under Review] <font color="red">[Core Rank=A]</font></li><hr>	
 <li> <font color="blue">Achyut Mani Tripathi </font>, Swarup Ranjan Behera, Konark Paul ,"K-Defensive Bit Planes: Defense Against Adversarial Attacks", IEEE International Joint Conference on Neural Networks
