--- a/index.html
+++ b/index.html
@@ -77,8 +77,9 @@ img {
 
 					<marquee marquee behavior="scroll" direction="up" scrollamount="2">
 						<ul>
-				                 <li><font color="red"> 10 March 2022: The Journal Paper Titled "Data Augmentation Guided Knowledge Distillation for Environmental Sound Classification" is Accepted to Neurocomputing, Elsevier
-					        </font>
+<li><font color="red"> 26 March 2022: A Total of Five Conference Papers are Accepted to International Joint Conference on Neural Networks 2022
+					      				 
+							 </font>
 						</ul>
 					</marquee>
 				</div>
@@ -115,19 +116,18 @@ a Hierarchical Classifier", Journal of Petroleum Science & Engineering, 107883, 
 <ul>
 <li><font color="blue">Achyut Mani Tripathi </font>, Konark Paul ,"Divide, Distill and Enhance: Online Knowledge Distillation for An Environmental Sound Classification", Conference of the International Speech Communication Association (INTERSPEECH), 2022, [Under Review] <font color="red">[Core Rank=A*]</font></li><hr>
 <li><font color="blue">Achyut Mani Tripathi </font>, Konark Paul ,"Temporal Self-Attention-Based Residual Network for An Environmental Sound Classification", Conference of the International Speech Communication Association (INTERSPEECH), 2022, [Under Review] <font color="red">[Core Rank=A*]</font></li><hr>
+<li> <font color="blue">Achyut Mani Tripathi* </font>, Aakansha Mishra* ,"Revamped  Knowledge Distillation for Environmental Sound Classification", IEEE International Joint Conference on Neural Networks
+(IJCNN),2022, [Accepted] <font color="red">[Core Rank=A]</font></li><hr>
 <li><font color="blue">Achyut Mani Tripathi </font>, Swarup Ranjan Behera, Konark Paul ,"Reverse Adversarial Attack To Enhance Environmental Sound Classification", IEEE International Joint Conference on Neural Networks
-(IJCNN),2022, [Under Review] <font color="red">[Core Rank=A]</font></li><hr>	
+(IJCNN),2022, [Accepted] <font color="red">[Core Rank=A]</font></li><hr>	
 <li> <font color="blue">Achyut Mani Tripathi </font>, Swarup Ranjan Behera, Konark Paul ,"K-Defensive Bit Planes: Defense Against Adversarial Attacks", IEEE International Joint Conference on Neural Networks
-(IJCNN),2022, [Under Review] <font color="red">[Core Rank=A]</font></li><hr>
+(IJCNN),2022, [Accepted] <font color="red">[Core Rank=A]</font></li><hr>
 <li><font color="blue">Achyut Mani Tripathi</font>, Swarup Ranjan Behera, Konark Paul,"Investigation of Performance of Visual Attention Mechanisms for Environmental Sound Classification: A Comparative Study", IEEE International Joint Conference on Neural Networks
-(IJCNN),2022, [Under Review] <font color="red">[Core Rank=A]</font></li><hr>		
+(IJCNN),2022, [Accepted] <font color="red">[Core Rank=A]</font></li><hr>		
 <li> <font color="blue">Achyut Mani Tripathi </font>, Swarup Ranjan Behera, Konark Paul,"Adv-IFD: Adversarial Attack Datasets for An
 Intelligent Fault Diagnosis", IEEE International Joint Conference on Neural Networks
-(IJCNN),2022, [Under Review] <font color="red">[Core Rank=A]</font></li><hr>
-<li> <font color="blue">Achyut Mani Tripathi*</font>, Aakansha Mishra*,"On Robustness of MLP-Mixer Against Adversarial Attacks", IEEE International Joint Conference on Neural Networks
-(IJCNN),2022, [Under Review] <font color="red">[Core Rank=A]</font></li><hr>
-<li> <font color="blue">Achyut Mani Tripathi* </font>, Aakansha Mishra* ,"Revamped  Knowledge Distillation for Environmental Sound Classification", IEEE International Joint Conference on Neural Networks
-(IJCNN),2022, [Under Review] <font color="red">[Core Rank=A]</font></li><hr>	
+(IJCNN),2022, [Accepted] <font color="red">[Core Rank=A]</font></li><hr>
+	
 <li> <font color="blue">Achyut Mani Tripathi</font>,"Enhancing Multivariate Time Series Classification Using Long Short Term Memory
 and Evidence Feed Forward HMM, IEEE International Joint Conference on Neural Networks
 (IJCNN), July 19-24, 2020, Glasgow,UK, <font color="red">[Core Rank=A]</font></li><hr>
