--- a/index.html
+++ b/index.html
@@ -217,11 +217,13 @@ IEEE), July 19-24, 2020, New Glasgow, UK</li><hr>
 	<h2><b> Reviewer :<br></h2><hr>
 	<ul>
 		<li>  IEEE/ACM Transactions on Audio, Speech, and Language Processing (IEEE TASLP)
+		<li> Neurocomputing, a Elsevier Journal
+		<li> IEEE International Joint Conference on Neural Networks (IJCNN)
 		<li> Artificial Intelligence Review, a Springer Journal
-			<li> SN Computer Science, a Springer Journal 
-				<li> Applied Intelligence, a Springer Journal 
-				<li> Springer Nature, a Springer Journal	
-		<li> IEEE International Joint Conference on Neural Networks (IJCNN)			
+		<li> SN Computer Science, a Springer Journal 
+		<li> Applied Intelligence, a Springer Journal 
+		<li> Springer Nature, a Springer Journal	
+					
 			
 		
 
