--- a/index.html
+++ b/index.html
@@ -77,7 +77,12 @@ img {
 
 					<marquee marquee behavior="scroll" direction="up" scrollamount="2">
 						<ul>
-<li><font color="red"> 26 March 2022: A Total of Five Conference Papers are Accepted to International Joint Conference on Neural Networks 2022
+<li><font color="red"> 26 March 2022: Conference Paper Titled "Revamped Knowledge Distillation for Environmental Sound Classification" is Accepted to International Joint Conference on Neural Networks 2022
+<li><font color="red"> 26 March 2022: Conference Paper Titled "Reverse Adversarial Attack To Enhance Environmental Sound Classification" is Accepted to International Joint Conference on Neural Networks 2022
+<li><font color="red"> 26 March 2022: Conference Paper Titled "K-Defensive Bit Planes: Defense Against Adversarial Attacks" is Accepted to International Joint Conference on Neural Networks 2022
+<li><font color="red"> 26 March 2022: Conference Paper Titled "Investigation of Performance of Visual Attention Mechanisms for Environmental Sound Classification: A Comparative Study" is Accepted to International Joint Conference on Neural Networks 2022
+<li><font color="red"> 26 March 2022: Conference Paper Titled "Adv-IFD: Adversarial Attack Datasets for An Intelligent Fault Diagnosis" is Accepted to International Joint Conference on Neural Networks 2022
+
 					      				 
 							 </font>
 						</ul>
