--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ img {
 and Method for Activity Identification and Problem Prediction During Oil and Gas Well Drilling".</li></ul><hr>
 <h3><font color="red"><b>Journals</b></font><br></h3><hr>
 <ul>	
-<li><b> <font color="blue">Achyut Mani Tripathi</font>, Om Jee Pandey, " Investigation of An Impact of Different Partition Stretegy On Knowledge Distillation for An Environmental Sound Classification, IEEE/ACM Transactions on Audio, Speech, and Language Processing, <font color="red">Under Review </font>, <font color="red">[H-index=64, Impact Factor=3.9]</font></li><hr>							
+<li><b> <font color="blue">Achyut Mani Tripathi</font>, Om Jee Pandey, " Divide, Distill and Improve: Distilling Knowledge For An Environmental Sound Classification, IEEE/ACM Transactions on Audio, Speech, and Language Processing, <font color="red">Under Review </font>, <font color="red">[H-index=64, Impact Factor=3.9]</font></li><hr>							
 <li><b> <font color="blue">Achyut Mani Tripathi</font>, Om Jee Pandey, "Vulnerability of Audio-MLP-Mixer Against Adversarial Attacks for Environmental Sound Classification: An Empirical Study, IEEE/ACM Transactions on Audio, Speech, and Language Processing, <font color="red">Under Review </font>, <font color="red">[H-index=64, Impact Factor=3.9]</font></li><hr>							
 <li><b> <font color="blue">Achyut Mani Tripathi</font>, Om Jee Pandey, "Multiview Knowledge Distillation for An Environmental Sound Classification, IEEE/ACM Transactions on Audio, Speech, and Language Processing, <font color="red">Under Review </font>, <font color="red">[H-index=64, Impact Factor=3.9]</font></li><hr>						
 <li> <font color="blue">Achyut Mani Tripathi</font>, "On Robustness of MLP-Mixer Models Against Adversarial
