--- a/index.html
+++ b/index.html
@@ -77,11 +77,13 @@ img {
 
 					<marquee marquee behavior="scroll" direction="up" scrollamount="2">
 						<ul>
-<li><font color="red"> 26 March 2022: Conference Paper Titled "Revamped Knowledge Distillation for Environmental Sound Classification" is Accepted to International Joint Conference on Neural Networks 2022
-<li><font color="red"> 26 March 2022: Conference Paper Titled "Reverse Adversarial Attack To Enhance Environmental Sound Classification" is Accepted to International Joint Conference on Neural Networks 2022
-<li><font color="red"> 26 March 2022: Conference Paper Titled "K-Defensive Bit Planes: Defense Against Adversarial Attacks" is Accepted to International Joint Conference on Neural Networks 2022
-<li><font color="red"> 26 March 2022: Conference Paper Titled "Investigation of Performance of Visual Attention Mechanisms for Environmental Sound Classification: A Comparative Study" is Accepted to International Joint Conference on Neural Networks 2022
-<li><font color="red"> 26 March 2022: Conference Paper Titled "Adv-IFD: Adversarial Attack Datasets for An Intelligent Fault Diagnosis" is Accepted to International Joint Conference on Neural Networks 2022
+<li><font color="red"> 6 May 2022: A Journal Paper Titled "When Sub-Band Features Meet Attention Mechanism While Knowledge Distillation for Sound Classification: An Empirical Study  
+" is Accepted to Applied Acoustic Journal, Elsevier						
+<li><font color="red"> 26 April 2022: A Conference Paper Titled "Revamped Knowledge Distillation for Environmental Sound Classification" is Accepted to International Joint Conference on Neural Networks 2022
+<li><font color="red"> 26 April 2022: A Conference Paper Titled "Reverse Adversarial Attack To Enhance Environmental Sound Classification" is Accepted to International Joint Conference on Neural Networks 2022
+<li><font color="red"> 26 April 2022: A Conference Paper Titled "K-Defensive Bit Planes: Defense Against Adversarial Attacks" is Accepted to International Joint Conference on Neural Networks 2022
+<li><font color="red"> 26 April 2022: A Conference Paper Titled "Investigation of Performance of Visual Attention Mechanisms for Environmental Sound Classification: A Comparative Study" is Accepted to International Joint Conference on Neural Networks 2022
+<li><font color="red"> 26 April 2022: A Conference Paper Titled "Adv-IFD: Adversarial Attack Datasets for An Intelligent Fault Diagnosis" is Accepted to International Joint Conference on Neural Networks 2022
 
 					      				 
 							 </font>
@@ -109,7 +111,7 @@ and Method for Activity Identification and Problem Prediction During Oil and Gas
 Attacks For Image Classification", Neurocomputing, Elsevier,  <font color="red">Under Review </font>, <font color="red">[H-index=119, Impact Factor=5.719]</font></li><hr>
 <li><b> <font color="blue">Achyut Mani Tripathi </font>, Konark Paul, "An Empirical Study of Adversarial Attacks on Environmental Sound
 Classification", Applied Acoustic, <font color="red">Under Review </font>, <font color="red">[H-index=49, Impact Factor=2.639]</font></li><hr>
-<li><b> <font color="blue">Achyut Mani Tripathi </font> Konark Paul, "When Sub-Band Feature Meets Attention Mechanism While Knowledge Distillation for Sound Classification: An Empirical Study", Appplied Acoustic, Elsevier, <font color="red">(Major Revision Submitted)</font>, <font color="red">[H-index=49, Impact Factor=2.639]</font></li><hr>
+<li><b> <font color="blue">Achyut Mani Tripathi </font> Konark Paul, "When Sub-Band Feature Meets Attention Mechanism While Knowledge Distillation for Sound Classification: An Empirical Study", Appplied Acoustic, Elsevier, <font color="red">(Accepted)</font>, <font color="red">[H-index=49, Impact Factor=2.639]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi</font>, Konark Paul, "Data Augmentation Guided Knowledge Distillation for Environmental
 Sound Classification",Neurocomputing, Elsevier, Vol.489, Page 59-77, <font color="red">[H-index=119, Impact Factor=5.719]</font></li><hr>
 <li> <font color="blue">Achyut Mani Tripathi*</font>, Aakansha Mishra*, "(Adv-ESC): Adversarial Attack Datasets for An Environmental Sound
